# darwinia

./: .editorconfig  .gitignore  .pm2.json  .rustfmt.toml  .travis.yml  .x86_64-unknown-linux-gnu_env_cross_compile  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile.toml  README.adoc  README.md  ROADMAP.md  build.rs  build.sh  darwinia_conf_example.json  fe_develop_conf.json  package-lock.json  roadmap.md  rust-toolchain.toml  rustfmt.toml  shell.nix  types.json  vercel.json  weight_scanner.py
cli/: Cargo.toml  build.rs
cli/src/: browser.rs  chain_spec.rs  cli.rs  command.rs  lib.rs
cli/src/command/: config.rs  mod.rs
client/cli/: Cargo.toml
client/cli/src/: arg_enums.rs  error.rs  execution_strategy.rs  informant.rs  lib.rs  params.rs  runtime.rs
core/basic-authorship/: Cargo.toml
core/basic-authorship/src/: basic_authorship.rs  lib.rs
core/chain-spec/: Cargo.toml
core/chain-spec/src/: chain_spec.rs  extension.rs  lib.rs
core/cli/: Cargo.toml
core/cli/src/: error.rs  execution_strategy.rs  informant.rs  lib.rs  params.rs  traits.rs
core/client/: Cargo.toml
core/client/db/: Cargo.toml
core/client/header-metadata/: Cargo.toml
core/client/src/: backend.rs  blockchain.rs  call_executor.rs  children.rs  cht.rs  client.rs  error.rs  genesis.rs  in_mem.rs  leaves.rs  lib.rs  notifications.rs
core/ethash/: Cargo.toml
core/ethash/src/: dag.rs  lib.rs  miller_rabin.rs
core/finality-grandpa/: Cargo.toml
core/finality-grandpa/src/: authorities.rs  aux_schema.rs  consensus_changes.rs  environment.rs  finality_proof.rs  import.rs  justification.rs  lib.rs  light_import.rs  observer.rs  tests.rs  until_imported.rs  voting_rule.rs
core/inflation/: Cargo.toml
core/inflation/src/: lib.rs  test.rs
core/merkle-mountain-range/: Cargo.toml
core/merkle-mountain-range/src/: common.rs  lib.rs  merkle_mountain_range.rs  merkle_proof.rs  mmr.rs
core/merkle-patricia-trie/: Cargo.toml
core/merkle-patricia-trie/benches/: trie.rs
core/merkle-patricia-trie/src/: db.rs  error.rs  lib.rs  nibbles.rs  node.rs  proof.rs  tests.rs  trie.rs
core/offchain/: Cargo.toml
core/offchain/src/: api.rs  lib.rs  testing.rs
core/primitives/: Cargo.toml
core/primitives/src/: lib.rs
core/rpc/: Cargo.toml
core/rpc/src/: lib.rs  metadata.rs
core/service/: Cargo.toml
core/service/src/: builder.rs  chain_ops.rs  config.rs  error.rs  lib.rs  status_sinks.rs
core/sr-eth-primitives/: Cargo.toml
core/sr-eth-primitives/src/: encoded.rs  error.rs  header.rs  lib.rs  pow.rs  receipt.rs  tests.rs  transaction.rs  types.rs
core/test-runtime/: Cargo.toml  build.rs
core/test-runtime/client/: Cargo.toml
core/types/: Cargo.toml
core/types/src/: lib.rs
evrml/sdr/: Cargo.toml
evrml/sdr/src/: lib.rs
frame/authority-discovery/: Cargo.toml
frame/babe/: Cargo.toml
frame/balances/: Cargo.toml  README.adoc
frame/balances/kton/: Cargo.toml  README.adoc
frame/balances/ring/: Cargo.toml  README.adoc
frame/balances/src/: lib.rs
frame/claims/: Cargo.toml
frame/claims/src/: address.rs  lib.rs
frame/elections-phragmen/: Cargo.toml  README.md
frame/elections-phragmen/src/: lib.rs
node/: Cargo.toml  build.rs
node/cli/: Cargo.toml  build.rs
node/cli/res/: crayfish-fir.json  darwinia-fir.json  darwinia.json  icefrog.json
node/cli/src/: browser.rs  chain_spec.rs  cli.rs  factory_impl.rs  lib.rs  panic_handle.rs  service.rs
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/rpc-client/src/: main.rs
node/rpc/src/: lib.rs
node/runtime/: Cargo.toml  build.rs
node/runtime/src/: constants.rs  impls.rs  lib.rs
node/runtime/wasm/: Cargo.lock.bak  Cargo.toml  build.sh
node/service/: Cargo.toml
node/service/res/: crab-genesis-swap.json  dags_merkle_roots.json  ethereum-genesis-swap-kton.json  ethereum-genesis-swap-ring.json  ethereum-tron-genesis-swap-kton.json  ethereum-tron-genesis-swap-ring.json  mapped-rings-example.json  tron-genesis-swap-kton.json  tron-genesis-swap-ring.json
node/service/src/: chain_spec.rs  client.rs  lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  frontier_service.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: crab.rs  darwinia.rs  koi.rs  mod.rs  pangolin.rs  pangoro.rs
node/src/service/: executors.rs  frontier.rs  instant_finalize.rs  mod.rs
node/testing/: Cargo.toml
node/testing/src/: genesis.rs  keyring.rs
primitives/: Cargo.toml
primitives/bridge/: Cargo.toml
primitives/bridge/src/: lib.rs
primitives/common/: Cargo.toml
primitives/common/src/: lib.rs
primitives/eth-primitives/: Cargo.toml
primitives/eth-primitives/src/: encoded.rs  error.rs  header.rs  lib.rs  pow.rs
primitives/ethash/: Cargo.toml
primitives/ethash/src/: lib.rs
primitives/merkle-patricia-trie/: Cargo.toml
primitives/merkle-patricia-trie/benches/: trie.rs
primitives/merkle-patricia-trie/src/: db.rs  error.rs  lib.rs  nibbles.rs  node.rs  proof.rs  tests.rs  trie.rs
primitives/phragmen/: Cargo.toml
primitives/phragmen/benches/: phragmen.rs
primitives/sp-eth-primitives/: Cargo.toml
primitives/sr-eth-primitives/: Cargo.toml
primitives/src/: lib.rs
primitives/staking/: Cargo.toml
rpc/: Cargo.toml
rpc/src/: crab.rs  darwinia.rs  lib.rs
runtime/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/constant/: Cargo.toml
runtime/crab/: Cargo.toml  build.rs  darwinia_types.json  polkadot-compatible-types.json  polkadot_compatible_types.json  types.json
runtime/darwinia/: Cargo.toml  build.rs  polkadot-compatible-types.json  polkadot_compatible_types.json  rust-toolchain.toml  types.json
runtime/koi/: Cargo.toml  build.rs
runtime/pangolin/: Cargo.toml  build.rs
runtime/pangoro/: Cargo.toml
runtime/src/: custom_struct.json  erc20.rs  erc721.rs  lib.rs  template.rs
runtime/wasm/: Cargo.toml
service/: Cargo.toml
service/res/: crab.json  crab_claims_list.json  dags_merkle_roots.json
service/src/: chain_spec.rs  lib.rs
(+1187 files in other folders)
